[package]
name = "nostr-relay-apigw"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
async-trait = "0.1.64"
aws-config = "0.54.1"
aws-sdk-apigatewaymanagement = "0.24.0"
aws-sdk-dynamodb = "0.24.0"
bech32 = "0.9.1"
hex = "0.4.3"
lambda_http = { version = "0.7", default-features = false, features = ["apigw_websockets", "apigw_http"] }
lambda_runtime = "0.7"
once_cell = "1.17.0"
secp256k1 = { version = "0.26.0", features = ["bitcoin-hashes"]}
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.11"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

